# brightness_control

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
brightnesscontrol/: _version.py
src/screen_dimmer/: __main__.py
tests/: test_windows.py
