[tool.poetry]
name = "screen-dimmer"
version = "0.1.0"
description = ""
authors = ["opkpEh <harshpandeykp20@gmail.com>"]
readme = "README.md"

keywords = ["brightness", "screen", "dimmer"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"